Correction of css align issue.

--- a/themes/bring_it_local/style.css
+++ b/themes/bring_it_local/style.css
@@ -3517,7 +3517,7 @@ a.jp-current:hover {color:#fff; background: #7eb041; border-radius:4px; padding:
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_details .reward_contribute_summary_title {color: #fff; font-size: 16px; font-weight: bold; background: #868686; padding: 7px;}
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_values .reward_contribute_summary_compaign_title {font-weight: bold; font-size: 15px; margin-bottom: 10px;}
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_values {background: color: #fff; padding: 10px;}
-.resp-tab-content aside.rewards_tab .reward_contribute_summary_values .reward_contribute_summary_value_line label {width: 276px; display: inline-block;}
+.resp-tab-content aside.rewards_tab .reward_contribute_summary_values .reward_contribute_summary_value_line label {width: 276px; display: inline-block; vertical-align: top;}
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_values .reward_contribute_summary_value_line div {width: 138px; text-align: right; display: inline-block;}
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_details_full_width .reward_contribute_summary_values .reward_contribute_summary_value_line div {width: 300px;}
 .resp-tab-content aside.rewards_tab .reward_contribute_summary_values .reward_contribute_summary_total {font-weight: bold; font-size: 16px; margin-top: 14px;}
